FEAT: Se agregó ruta y módulo de practicario

--- a/src/main/webapp/app/layouts/navbar/navbar.component.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.component.html
@@ -33,6 +33,12 @@
                             <span jhiTranslate="global.menu.courses.multipleChoice">Multiple choice</span>
                         </a>
                     </li>
+                    <li>
+                        <a class="dropdown-item" routerLink="courses/practitioner" routerLinkActive="active" (click)="collapseNavbar()">
+                            <fa-icon icon="user" fixedWidth="true"></fa-icon>
+                            <span jhiTranslate="global.menu.courses.practitioner">Practitioner</span>
+                        </a>
+                    </li>
                 </ul>
             </li>
             <!-- jhipster-needle-add-element-to-menu - JHipster will add new menu items here -->
