FEAT: Se agregó fecha y hora, y componente a calificación

--- a/src/main/webapp/app/courses/multiple-choice/multiple-choice.component.html
+++ b/src/main/webapp/app/courses/multiple-choice/multiple-choice.component.html
@@ -34,7 +34,7 @@
         </div>    
       </div>
       <div class="col-md-10" *ngIf="contenido.calificada">
-        <h4>Calificación: {{calificacion}}</h4>
+        <h4>Calificación: {{calificacionActividad}}</h4>
       </div>
     </div>
   </div>
