--- a/src/main/webapp/app/courses/practitioner/sum/sum.component.scss
+++ b/src/main/webapp/app/courses/practitioner/sum/sum.component.scss
@@ -151,7 +151,7 @@ font-size: 24px;
     border-radius: 50px;
 }
 li.pagina{
-	display: inline-flex;
+	display: inline-block;
 	border-radius: 50%;
 	height: 40px;
     width: 40px;
