FEAT: Se agregó funcionalidad de guardar calificación en base de datos.

--- a/src/main/webapp/app/courses/practitioner/sum/sum.component.html
+++ b/src/main/webapp/app/courses/practitioner/sum/sum.component.html
@@ -1,6 +1,6 @@
 <!--Ejercicio Start-->
 Respuestas correctas: {{respuestasCorrectas}}
-Calificación: {{calificacion}}
+Calificación: {{calificacionActividad}}
 <div *ngFor="let ejercicio of ejercicios; index as indiceEjercicio">
 	<div class="ejercicio p95 centrar desarrollo centrar-contenido container" *ngIf="paginaActiva == indiceEjercicio" style="height: 500px !important;">
 		<div class="operacion-vertical" style="width: 30%;">
