--- a/src/main/webapp/app/courses/multiple-choice/multiple-choice.component.scss
+++ b/src/main/webapp/app/courses/multiple-choice/multiple-choice.component.scss
@@ -1,5 +1,41 @@
 @charset "UTF-8";
 
+// Variables
+// Colors
+$main-blue: #273354;
+$bg-color: #fbfbfb;
+$bg-color2: white;
+$secondary-color: #b39452;
+$white-bg: #f8fafc;
+$silver-blue: #e9edf0;
+$blue: #076afc;
+$color-text: rgb(102, 102, 102);
+
+$darkblue: darken($main-blue, 10%);
+$lightblue: lighten($main-blue, 3%);
+
+// Media query
+@mixin smartphone {
+  @media (min-width: 1px) and (max-width: 760px) {
+    @content;
+  }
+}
+@mixin tablet {
+  @media (min-width: 1025px) and (max-width: 1280px) {
+    @content;
+  }
+}
+@mixin ipad {
+  @media (min-width: 600px) and (max-width: 1024px) {
+    @content;
+  }
+}
+@mixin desktop {
+  @media (min-width: 900px) and (max-width: 1200px) {
+    @content;
+  }
+}
+
 /* General styles */
 * {
   margin: 0;
@@ -7,6 +43,7 @@
   font-family: 'Open Sans', sans-serif;
   font-weight: 400;
 }
+
 a:-webkit-any-link {
   color: #4466ae;
   cursor: pointer;
@@ -59,7 +96,7 @@ p {
   font-size: 18px;
   font-weight: 400;
   font-style: normal;
-  color: #7a7a7a;
+  color: $color-text;
   line-height: 24px;
 }
 strong {
@@ -69,15 +106,6 @@ strong {
   color: white !important;
 }
 
-body {
-  background-color: #f6f6f6;
-}
-.blue-dark {
-  background-color: #12022d;
-}
-.white-bg {
-  background-color: #f6f6f6;
-}
 .box-shadow {
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
 }
@@ -199,8 +227,180 @@ body {
 .incorrecta {
   border-left: 2px red solid;
 }
-.form-row {
-  margin: 5px;
-  padding: 10px 5px;
-  border-radius: 10px;
+
+.border-color {
+  border: 1px solid red;
+}
+// Multiple choise Style
+.row-master-mc {
+  border: 1px solid silver;
+  width: 100%;
+  height: auto;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: $white-bg;
+}
+.row-mc {
+  position: relative;
+  width: 96%;
+  max-width: 1200px;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  @include smartphone {
+    width: 90%;
+  }
+}
+.row-title-mc {
+  position: relative;
+  width: 100%;
+  height: 60px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-bottom: 1px solid rgb(166, 166, 166);
+
+  h3 {
+    font-size: 20px;
+    @include smartphone {
+      font-size: 16px;
+    }
+  }
+}
+.row-act-mc {
+  position: relative;
+  width: 100%;
+  height: auto;
+  border-radius: 0px;
+}
+.row-question-mc {
+  position: relative;
+  width: 100%;
+  height: auto;
+
+  p {
+    @include smartphone {
+      font-size: 14px;
+    }
+  }
+}
+.row-answer-mc {
+  position: relative;
+  width: 100%;
+  height: auto;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  // flex-flow: row wrap;
+  justify-content: flex-start;
+  margin-bottom: 25px;
+  @include smartphone {
+    flex-direction: column;
+    flex-wrap: nowrap;
+  }
+
+  div {
+    position: relative;
+    width: auto;
+    height: auto;
+    margin: 10px;
+    @include smartphone {
+      display: flex;
+      justify-content: center;
+    }
+    .button {
+      position: relative;
+      border: 2px solid $blue;
+
+      padding: 10px 16px;
+      font-size: 16px;
+      user-select: none;
+      border-radius: 8px;
+      box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.1);
+      width: auto;
+      min-width: 180px;
+      min-height: 30px;
+      @include smartphone {
+        font-size: 13px;
+        line-height: 16px;
+        padding: 6px 8px;
+      }
+    }
+  }
+}
+.row-footer-mc {
+  position: relative;
+  width: 100%;
+  height: 80px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: $silver-blue;
+
+  button {
+    background-color: $blue;
+    @include smartphone {
+      font-size: 16px;
+      padding: 10px 18px;
+    }
+  }
+}
+.col-calif-mc {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 600px;
+  background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0), rgba(74, 81, 97, 1));
+  transition: 0.4s;
+
+  .img-calif {
+    position: absolute;
+    bottom: 0px;
+    right: 10%;
+    width: 330px;
+    height: 425px;
+    background-image: url('img_calif.png');
+    background-position: center;
+    background-size: 100%;
+    background-repeat: no-repeat;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: center;
+    @include smartphone {
+      width: 270px;
+      height: 347px;
+    }
+
+    h4 {
+      position: relative;
+      width: 100%;
+      height: auto;
+      color: $color-text;
+      font-size: 22px;
+      text-align: center;
+      @include smartphone {
+        font-size: 20px;
+      }
+    }
+    span {
+      width: 100%;
+      height: auto;
+      text-align: center;
+      font-size: 40px;
+      color: $blue;
+      margin-top: 5px;
+      margin-bottom: 15px;
+      @include smartphone {
+        margin-top: 0px;
+        font-size: 30px;
+        margin-bottom: 10px;
+      }
+    }
+  }
 }
