--- a/src/main/webapp/app/courses/practitioner/sum/sum.component.html
+++ b/src/main/webapp/app/courses/practitioner/sum/sum.component.html
@@ -19,13 +19,14 @@ Correcta: {{respuestaCorrecta}}
 
 				<!--INVERTIDA respuesta única-->
 				<div *ngIf="ejercicio.tipo == 'iru' && indiceo == ejercicio.operandos.length - 1">
-					<div class="contInput" *ngFor="let digito of ejercicio.digitosResultado; index as idigito;">
+					<div class="contInput" *ngFor="let digito of modeloResultado; index as idigito;">
 						<!--Campos para dígitos-->
 						<input 
 							*ngIf="digito != '.' && digito != ','"
 							type="number"
 							class="resultadoi digito-resultado"
-							[(ngModel)]="ejercicio.modeloResultado[idigito]"
+							[(ngModel)]="modeloResultado[idigito].valor"
+							(ngModelChange)='cambiarFocus()'
 						>
 						<!--Campos para coma o punto-->
 						<input 
@@ -46,14 +47,15 @@ Correcta: {{respuestaCorrecta}}
 			<!--INVERTIDA-->
 			<span style="letter-spacing: 6px;" *ngIf="ejercicio.tipo == 'iru' || ejercicio.tipo == 'iom'">{{ejercicio.resultado}}</span>
 			<!--NORMAL-->
-			<div class="contInput" *ngFor="let digito of ejercicio.digitosResultado; index as idigito;">
+			<div class="contInput" *ngFor="let digito of modeloResultado; index as idigito;">
 				<div *ngIf="ejercicio.tipo == 'nru'">
 					<!--Campos para dígitos-->
 					<input 
 						*ngIf="digito != '.' && digito != ','"
 						type="number"
 						class="resultadoi digito-resultado"
-						[(ngModel)]="ejercicio.modeloResultado[idigito]"
+						[(ngModel)]="modeloResultado[idigito].valor"
+						(ngModelChange)='cambiarFocus()'
 					>
 					<!--Campos para coma o punto-->
 					<input 
