TEST: Se agregó video de prueba

--- a/src/main/webapp/app/courses/main/main.component.html
+++ b/src/main/webapp/app/courses/main/main.component.html
@@ -1,12 +1,17 @@
 <div class="container">
     <div *ngFor="let course of courses; index as courseIndex" 
-        style="border: 1px solid black; float: left; width: 100px; height: 100px;"         
+        style="border: 1px solid black; float: left; width: 100px; height: 100px;"
         routerLink="{{'/' + course.route}}">
         <span>{{course.name}}</span>
         <span>{{course.author}}</span>
         <span>{{course.version}}</span>
         <span>{{course.cover}}</span>
-        <span>{{course.route}}</span>
-        <img src="{{'./../../../assets/' + course.cover + '.png'}}">
-    </div>
+        <span>{{course.route}}</span>        
+    </div>    
+    <img src="./../../../assets/img/portada1.png">
+</div>
+<div class="row">      
+    <video width="320" height="240" controls>
+        <source src="./../../../assets/videos/video1.mp4" type="video/mp4">
+    </video>
 </div>
