--- a/src/main/webapp/app/courses/main/main.component.scss
+++ b/src/main/webapp/app/courses/main/main.component.scss
@@ -14,6 +14,7 @@ $disabled-color: rgb(164, 164, 164);
 $darkblue: darken($main-blue, 10%);
 $light-purple1: lighten($light-purple, 3%);
 $light-purple2: lighten($light-purple, 8%);
+$light-purplehover: lighten($light-purple, 1%);
 
 // Media query
 @mixin smartphone {
@@ -52,15 +53,26 @@ $light-purple2: lighten($light-purple, 8%);
     height: auto;
     display: flex;
     flex-direction: row;
+    flex-wrap: nowrap;
+    // flex-wrap: wrap;
+    @include smartphone {
+      justify-content: center;
+    }
 
     .cover-view {
       position: relative;
       width: 360px;
       height: 200px;
       margin: 12px;
+      margin-right: 15px;
       display: flex;
       justify-content: center;
       align-items: center;
+      @include smartphone {
+        flex-direction: column;
+        height: auto;
+        width: 180px;
+      }
 
       .cover-row {
         position: relative;
@@ -69,13 +81,23 @@ $light-purple2: lighten($light-purple, 8%);
         display: flex;
         justify-content: flex-start;
         align-items: center;
+        @include smartphone {
+          width: 100%;
+          height: 160px;
+          justify-content: center;
+        }
 
-        img {
+        .img-cover {
           position: relative;
           width: 180px;
           height: 180px;
           background-color: $light-purple2;
           border-radius: 10px;
+          transition: 0.4s;
+          @include smartphone {
+            width: 150px;
+            height: 150px;
+          }
         }
 
         &:nth-child(2) {
@@ -83,6 +105,9 @@ $light-purple2: lighten($light-purple, 8%);
           display: flex;
           flex-direction: column;
           justify-content: space-around;
+          @include smartphone {
+            width: 100%;
+          }
 
           .item-1 {
             position: relative;
@@ -104,6 +129,9 @@ $light-purple2: lighten($light-purple, 8%);
               bottom: 0;
               left: 0;
               background-color: $light-purple;
+              @include smartphone {
+                display: none;
+              }
             }
           }
           .item-2 {
@@ -125,6 +153,15 @@ $light-purple2: lighten($light-purple, 8%);
               border: 0;
               outline: none;
               transition: 0.4s;
+              box-shadow: 0 10px 18px rgba(7, 6, 252, 0.25);
+              @include smartphone {
+                font-size: 13px;
+                width: 70px;
+                height: 31px;
+              }
+              &:hover {
+                box-shadow: 0px 2px 12px rgba(8, 50, 158, 0.6);
+              }
             }
             button.cover-c {
               position: relative;
@@ -139,6 +176,10 @@ $light-purple2: lighten($light-purple, 8%);
               background-size: 35px;
               opacity: 0.5;
               cursor: default;
+              @include smartphone {
+                width: 30px;
+                height: 30px;
+              }
             }
           }
         }
@@ -152,16 +193,30 @@ $light-purple2: lighten($light-purple, 8%);
   font-weight: 400;
   color: $blue !important;
   margin-top: 2px;
+  @include smartphone {
+    font-size: 14px;
+  }
 }
 .cover-t2 {
   font-size: 20px;
   font-weight: 600;
   line-height: 22px;
   margin-top: 7px;
+  @include smartphone {
+    font-size: 18px;
+  }
 }
 .cover-version {
   font-size: 14px;
   color: grey !important;
   position: absolute !important;
   bottom: 10px !important;
+  @include smartphone {
+    font-size: 13px;
+  }
+}
+// Hover > + ~
+// .cover-row:hover ~ .img-cover {
+.cover-view:hover .img-cover {
+  background-color: $light-purplehover !important;
 }
