FIX: Se eliminó caracter sobrante.

--- a/src/main/webapp/app/courses/component/component.component.html
+++ b/src/main/webapp/app/courses/component/component.component.html
@@ -6,7 +6,7 @@ Calificación: {{calificacionActividad}}
         <!--
         <jhi-sum [sumIndex]="indiceEjercicio" (ejercicioCalificado)='registrarCalificacion($event)'></jhi-sum>
         -->
-        <jhi-component-item [data]="ejercicio"></jhi-component-item>x   
+        <jhi-component-item [data]="ejercicio"></jhi-component-item>
 	</div>
 </div>
 <!--Paginación-->
